tests/suite/snapshots/suite__check__tests__check__bad-bin-op1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-bin-op1.xi:2:14]
   │
 2 │     b:bool = true < false
   ·              ──┬─  
   ·                ╰─── Expected int but found bool
───╯

